--- a/styles.css
+++ b/styles.css
@@ -1044,6 +1044,10 @@ footer {
   }
   
 @media screen and (max-width: 724px) {
+    .container {
+    justify-content: center;
+    max-width: 720px;
+  }
       header form input {
       width: 13rem;
       padding: 0.4rem 0.1rem;
@@ -1064,7 +1068,10 @@ footer {
 
 /* ---------------------------For medium devices-------------------------- */
 @media screen and (min-width: 576px) {
-
+  .container {
+    justify-content: center;
+    max-width: 720px;
+  }
   .nav__list {
     justify-content: space-around;
     column-gap: 1.5rem;
@@ -1079,6 +1086,10 @@ footer {
 /* -----------------------------For small devices--------------------------------- */
 /* Remove if you choose, the minimalist design */
 @media (max-width: 480px) {
+    .container {
+    justify-content: center;
+    max-width: 720px;
+  }
     .hero h1 {
       padding-top: 2rem;
         font-size: 24px;
