--- a/styles.css
+++ b/styles.css
@@ -927,6 +927,7 @@ footer {
 }
 
 @media screen and (min-width: 767px) {
+  .wrap
   .nav {
     height: calc(var(4.5rem));
   }
@@ -984,8 +985,8 @@ footer {
   }
   
   .container {
-    justify-content: center;
-    max-width: 680px;
+    justify-content:space-around;
+    max-width: 720px;
   }
   .wrapper .footer-widget,
   .wrapper .footer-widget:nth-child(1) {
@@ -1066,8 +1067,9 @@ footer {
 /* ---------------------------For medium devices-------------------------- */
 @media screen and (min-width: 576px) {
   .nav__list {
+    /* max-width: 300px; */
     justify-content: space-around;
-    column-gap: 1.5rem;
+    column-gap: 1rem;
   }
 }
 @media (max-width:500px) {
