--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 * {
   --padding: 0 2rem;
   --co-one:#722;
-  --co-two:  #fcb900;
+  --co-two:#fa0;
   --co-tree: #f5fbf8;
   --co-white: #fff;
   --co-dark: #222;
